--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -79,6 +79,14 @@
         <div class="description-box">
 	     <h3>Child growth standards</h3>
 	     <p>This web site presents the WHO Child Growth Standards. These standards were developed using data collected in the WHO Multicentre Growth Reference Study. The site presents documentation on how the physical growth curves and motor milestone windows of achievement were developed as well as application tools to support the implementation of the standards</p>
+	     <fieldset id="bfaresult">
+                <legend>BMI Results</legend>
+                <ol>
+                    <li class="results">BMI: <span class="scores" id="bmi-result"></span></li>
+                    <li class="results">
+                        Z-Score: <span class="scores" id="bmiage-result"></span></li>
+                </ol>
+            </fieldset>
 	</div>
 	    
 	<div class="calculation-box">
