--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/themes/material_green.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <link rel="stylesheet" href="/style.css"> <!-- Cập nhật đường dẫn -->
-    <script src="/script.js"></script> <!-- Cập nhật đường dẫn -->
+    <script src="/script.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <title>WHO Z-Score</title>
     <link rel="icon" href="/icon.png" type="image/png">
     <style>
@@ -87,6 +88,7 @@
                         Z-Score: <span class="scores" id="bmiage-result-side"></span></li>
                 </ol>
             </fieldset>
+	    <div class="plot-container" id="bmi-chart"></div>
 	</div>
 	    
 	<div class="calculation-box">
@@ -305,6 +307,10 @@ function calculateAgeInDays(dob, currentDay) {
             })
             .then(response => response.json())
             .then(data => {
+		if (data.chart_data) {
+			const chartData = JSON.parse(data.chart_data);
+			Plotly.react("bmi-chart", chartData.data, chartData.layout);
+		}
                 document.getElementById('bmi-result-side').innerText = `${data.bmi}`;
                 document.getElementById('bmi-result').innerText = `BMI: ${data.bmi}`;
 		    
