--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -90,7 +90,7 @@
             </fieldset>
 	    <div class="plot-container" id="bmi-chart"></div>
 
-	<fieldset id="wfaresult"">
+	<fieldset id="wfaresult">
 		<legend>WFA Results</legend>
 		<ol>
 		<li class="results">
