--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -14,41 +14,12 @@
 	<title>WHO Z-Score</title>
 	<link rel="icon" href="/icon.png" type="image/png" />
 	<style>
-		p {margin-top: 4px;margin-bottom: 4px;padding-left: 5px;}
-
-		.zscore-form {
-			margin-bottom: 20px;
-		}
-
-		.zscore-form label {
-			display: block;
-			margin-bottom: 5px;
-			font-weight: bold;
-		}
-
-		.result-container {
-			max-width: 400px;
-			justify-content: space-between;
-			align-items: center;
-			background-color: #117d67;
-			padding: 10px;
-			border-radius: 10px;
-			color: white;
-			margin: 20px 0;
-			box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-			/* Thêm shadow */
-		}
-
-		.result-item {
-			display: flex;
-			flex-direction: column;
-			align-items: left;
-			justify-content: left;
-			font-size: 17px;
-			flex: 1;
-			/* Chia đều không gian cho các item */
-			padding: 5px 10px;
-		}
+		p { margin-top: 4px; margin-bottom: 4px; padding-left: 5px; }
+		.zscore-form { margin-bottom: 20px; }
+		.zscore-form label { display: block; margin-bottom: 5px; font-weight: bold; }
+		.result-container { max-width: 400px; justify-content: space-between; align-items: center; background-color: #117d67; padding: 10px; border-radius: 10px; color: white; margin: 20px 0; box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1); }
+		.result-item { display: flex; flex-direction: column; align-items: left; justify-content: left; font-size: 17px; flex: 1; padding: 5px 10px; }
+		.dropbtn { padding: 5px; font-size: 14px; cursor: pointer; border-radius: 5px; }
 	</style>
 </head>
 
@@ -157,7 +128,7 @@
 					<div class="container_date_input">
 						<div class="age-method-container">
 							<label for="age-option">Age Input Method:</label>
-							<select id="age-option" onchange="toggleAgeInput()">
+							<select class="dropbtn" id="age-option" onchange="toggleAgeInput()">
 								<option value="dob">Date of Birth</option>
 								<option value="months">Age in Months</option>
 								<option value="days">Age in Days</option>
@@ -208,14 +179,7 @@
 					<button type="submit">Calculate</button>
 				</form>
 				<div id="result" class="result-container">
-					<div style="
-								font-size: 1.17em;
-								font-weight: bold;
-								margin-bottom: 8px;
-								padding-left: 5px;
-							">
-						Result:
-					</div>
+					<div style="font-size: 1.17em;font-weight: bold;margin-bottom: 8px;padding-left: 5px;">Result:</div>
 					<div id="spinner" style="display: none; text-align: center;">
 						<img src="data/spinner.gif" style="width: 100px; height: 100px;">
 					</div>
