--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -138,12 +138,12 @@
 						<div id="dob-container" class="input-row">
 							<div id="dob-input" class="field_date_input">
 								<label for="dob">Date of Birth:</label>
-								<input type="text" id="dob" placeholder="dd/mm/yyyy" required />
+								<input type="text" id="dob" placeholder="dd/mm/yyyy" />
 							</div>
 
 							<div id="current-day-input" class="field_date_input">
 								<label for="current-day">Current Day:</label>
-								<input type="text" id="current-day" placeholder="dd/mm/yyyy" required />
+								<input type="text" id="current-day" placeholder="dd/mm/yyyy" />
 							</div>
 						</div>
 
