--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </svg>
 		<span class="tooltip-text">Mở Sidebar</span>
         </div>
-	<div class="header-title"> MEDICAL CALCULATOR </div>
+	<div class="header-title"> MEDICAL TOOLS </div>
     </div>
 
     <div id="mySidebar" class="sidebar"> 
