--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -83,7 +83,7 @@
 			</svg>
 			<span class="tooltip-text">Mở Sidebar</span>
 		</div>
-		<div class="header-title">MEDICAL CALCULATOR</div>
+		<div class="header-title">MEDICAL TOOLS</div>
 	</div>
 
 	<div id="mySidebar" class="sidebar">
