--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         </svg>
 		<span class="tooltip-text">Mở Sidebar</span>
         </div>
-	<div class="header-title"> MEDICAL TOOLS </div>
+	<div class="header-title">
+		<img src="data/medix.png" alt="Medix Logo">
+	</div>
     </div>
 
     <div id="mySidebar" class="sidebar"> 
