--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -77,7 +77,7 @@
 	<div class="header">
 		<div class="icon-container" onclick="toggleSidebar()">
 			<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none">
-				<path d="M8.85719 3H15.1428C16.2266 2.99999 17.1007 2.99998 17.8086 3.05782C18.5375 3.11737 19.1777 3.24318 19.77 3.54497C20.7108 
+			<path d="M8.85719 3H15.1428C16.2266 2.99999 17.1007 2.99998 17.8086 3.05782C18.5375 3.11737 19.1777 3.24318 19.77 3.54497C20.7108 
 			4.02433 21.4757 4.78924 21.955 5.73005C22.2568 6.32234 22.3826 6.96253 22.4422 7.69138C22.5 8.39925 22.5 9.27339 22.5 10.3572V13.6428C22.5 
 			14.7266 22.5 15.6008 22.4422 16.3086C22.3826 17.0375 22.2568 17.6777 21.955 18.27C21.4757 19.2108 20.7108 19.9757 19.77 20.455C19.1777 20.7568 
 			18.5375 20.8826 17.8086 20.9422C17.1008 21 16.2266 21 15.1428 21H8.85717C7.77339 21 6.89925 21 6.19138 20.9422C5.46253 20.8826 4.82234 20.7568 
@@ -193,12 +193,12 @@
 
 							<div id="months-input" class="age-months-group" style="display: none">
 								<label for="age-months">Age in Months:</label>
-								<input type="number" id="age-months" name="age-months" min="0" placeholder="Enter age in months" />
+								<input type="number" style="width: 100%;" id="age-months" name="age-months" min="0" placeholder="Enter age in months" />
 							</div>
 
 							<div id="days-input" class="age-days-group" style="display: none">
 								<label for="age-days">Age in Days:</label>
-								<input type="number" id="age-days" name="age-days" min="0" placeholder="Enter age in days" />
+								<input type="number" style="width: 100%;" id="age-days" name="age-days" min="0" placeholder="Enter age in days" />
 							</div>
 						
 					</div>
@@ -257,18 +257,14 @@
 				dateFormat: "d/m/Y",
 				onChange: updateAgeDisplay, // Cập nhật tuổi khi thay đổi ngày sinh
 				maxDate: "today",
-				locale: {
-					firstDayOfWeek: 1, // Đặt thứ hai là ngày đầu tuần
-				},
+				locale: {firstDayOfWeek: 1,},
 			});
 
 			flatpickr("#current-day", {
 				dateFormat: "d/m/Y",
 				defaultDate: new Date(), // Set current day as default
 				onChange: updateAgeDisplay, // Cập nhật tuổi khi thay đổi ngày sinh
-				locale: {
-					firstDayOfWeek: 1, // Đặt thứ hai là ngày đầu tuần
-				},
+				locale: {firstDayOfWeek: 1,},
 			});
 		});
 
